changed name of the project under package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "grace-church-50th-anniversary",
+  "name": "christtheking-church",
   "private": true,
   "version": "1.0.0",
   "type": "module",
